# StarCraftBuilder

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  starcraft_builder.sln  techtrees.csv
src/framework/: BaseBuilding.cpp  BaseBuilding.h  BaseUnit.cpp  BaseUnit.h  BuildList.cpp  BuildList.h  CMakeLists.txt  Debug.h  DefinedExceptions.h  Events.h  FixedPoint.h  Framework.h  GameObject.cpp  GameObject.h  GameObjectManager.h  ID.cpp  ID.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  Inventory.cpp  Inventory.h  Message.h  Messenger.h  Optimizer.h  Resources.h  Simulator.cpp  Simulator.h  Status.h  TypeID.cpp  TypeID.h  Types.h  VespeneBuilding.cpp  VespeneBuilding.h  Workers.h  cmake_install.cmake  convertTechTreeToCode.py  framework.vcxproj  framework.vcxproj.filters
src/framework/Release/: framework.lib
src/framework/framework.dir/Debug/framework.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
src/framework/framework.dir/Release/framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  lib.command.1.tlog  (+4 more)
src/races/terran/: CMakeLists.txt  GameObjectManagerTerran.cpp  GameObjectManagerTerran.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  TerranBuilding.cpp  TerranBuilding.h  TerranBuildings.cpp  TerranBuildings.h  TerranSimulator.cpp  TerranUnits.h  cmake_install.cmake  terran_simulator.vcxproj  terran_simulator.vcxproj.filters
(+81 files in other folders)
